# YouFlix-AWS-Video-Site

./: .env  AWS_deployment_script.py  AWS_setup_script.py  AWS_teardown_script.py  aws_config.json  create_eb_roles.py  pyproject.toml  requirements.txt
YouFlix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: Dockerfile  Procfile  aws_config.json  config.py  database.py  dependencies.py  main.py  requirements.txt  schemas.py
app/.ebextensions/: 01_fastapi.config  02_deploy.config
app/models/: comment.py  movie.py  user.py
app/routers/: auth.py  comments.py  movies.py
app/static/css/: styles.css
app/templates/: base.html  comments_list.html  index.html  login.html  movie_browse.html  movie_detail.html  movie_edit.html  movie_list.html  movie_upload.html  profile.html  register.html  user_comments.html
app/utils/: aws_dynamodb.py  aws_s3.py  parameter_store.py
tests/: test_auth.py  test_comments.py  test_movies.py
